# Pokkie-cli

pokkie/: README.md  install.bat  install.sh  pokkie.bat  pyproject.toml  setup.py
pokkie/pokkie/: __init__.py  api.py  config.py  main.py  tools.py
pokkie/pokkie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
