[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokkie"
version = "0.2.0"
description = "Blazingly fast AI terminal assistant powered by Groq"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "pygetwindow>=0.0.9",
]

[project.scripts]
pokkie = "pokkie.main:main"
